changed design in Header, info Sources, the default value in password reset. The output from subregions to regions has been changed on the map

--- a/src/components/dashboards/mainLanding/MapBelarus/styles/styles.css
+++ b/src/components/dashboards/mainLanding/MapBelarus/styles/styles.css
@@ -1,3 +1,8 @@
-#subregions polygon:hover {
+#regions polygon {
+    pointer-events: all;
+    cursor: pointer;
+}
+
+#regions polygon:hover {
     fill: rgba(0,0,0,0.3);
 }
