--- a/src/components/dashboards/mainLanding/MapBelarus/styles/styles.css
+++ b/src/components/dashboards/mainLanding/MapBelarus/styles/styles.css
@@ -1,8 +1,9 @@
 #regions polygon {
     pointer-events: all;
     cursor: pointer;
+    fill: #325738;
 }
 
 #regions polygon:hover {
-    fill: rgba(0,0,0,0.3);
+    fill: rgba(39, 199, 40, 0.3);
 }
